--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -81,7 +81,7 @@
     margin-top: 0;
 }
 .timeGraph {
-    height: 450px;
+    height: 520px;
 }
 
 .graph {
@@ -102,6 +102,36 @@
     height: 100%;
     border: 1px solid #e5e7eb;
     padding: 20px;
+}
+
+.tabs {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    padding-bottom: 12px;
+    margin: 0;
+    font-size: 1rem;   
+}
+
+.tab {
+    border-bottom: 2px solid transparent;
+    padding-bottom: 12px;
+}
+
+.inactive {
+    cursor: pointer;
+    color: #9ca3af;
+    transition: all 0.3s ease;
+}
+.inactive:hover {
+    color: #6366f1;
+}
+.active {
+    font-weight: 600;
+    color: #6c6f81;
+    border-bottom: 2px solid #d1d5db;
+    transition: all 0.2s ease;
 }
 
 .cardsBlock {
