Added modal for details on analytics subscriptions and added modal with email

--- a/src/components/ui/Modal/Modal.module.css
+++ b/src/components/ui/Modal/Modal.module.css
@@ -15,7 +15,7 @@
 }
 
 .modal {
-    width: min(90vw, 480px);
+    min-width: min(90vw, 480px);
     background-color: #fff;
     border-radius: 12px;
     padding: 24px;
