--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -29,17 +29,20 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    font-size: 35px;
     margin: auto 0;
 }
-.socials a {
+.socials button {
+    cursor: pointer;
+    font-size: 35px;
+    border: none;
+    background-color: transparent;
     color: #4f46e5;
     line-height: 0;
 }
-.socials a:hover {
+.socials button:hover {
     color: #6366f1;
 }
-.socials a:active {
+.socials button:active {
     transform: scale(0.92);
 }
 
