--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -31,7 +31,9 @@
     color: #f44336;
 }
 
-.headModal h3 {
+.headModal h3,
+.detailsModal h1 {
+    margin: 0;
     padding: 8px 0;
     font-size: 1.25rem;
     font-weight: 600;
@@ -148,4 +150,171 @@ div.disabled {
     user-select: none;
     filter: grayscale(0.2);
     transition: opacity 0.3s ease, filter 0.3s ease;
+}
+
+
+/* Молдалка подробностей подписки в топе аналитики  */
+
+.detailsModal {
+    min-height: min(80vh, 470px);
+    width: min(90vw, 640px);
+}
+
+.headSub {
+    display: flex;
+    margin: 0 40px;
+    justify-content: center;
+    gap: 12px;
+}
+
+.detailsModal h2 {
+    margin: 0;
+    padding: 0.8rem 0 10px;
+    font-weight: 500;
+    width: 100%;
+    border-top: 1px solid #e5e7eb;
+}
+
+.mainDetails {
+    width: 100%;
+}
+.detailsModal h6 {
+    margin: 0.5rem 0;
+    font-size: 0.93rem;
+    font-weight: 400;
+    color: #6c6f81;
+}
+
+.expensesBlock {
+    /* padding-top: 8px; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    margin-bottom: 1.5rem;
+}
+
+.expenses {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% / 2 - 16px);
+    background-color: #ffffff;
+    padding: 24px 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+    border: 1px solid #e5e7eb;
+}
+.expenses:hover {
+    background-color: #f9fafb;
+}
+
+.expenses h3 {
+    font-size: 0.9rem;
+    color: #6c6f81;
+    font-weight: 400;
+    text-align: center;
+}
+.expenses h3 span {
+    display: block;
+    padding-top: 8px;
+    font-size: 1.8rem;
+    color: #4f46e5;
+    font-weight: 600;
+}
+
+.paidHistory {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    overflow: auto;
+}
+
+.marker {
+    width: 10px;
+    height: 10px;
+    background-color: #4f46e5;
+    border-radius: 50%;
+}
+.arrow {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid #b5b5b6;
+    background-color: #fff;
+    z-index: 1;
+}
+.arrow::after {
+    position: absolute;
+    content: '>';
+    top: 42%;
+    left: 100%;
+}
+
+.payment {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    /* gap: 15px; */
+    min-width: 80px;
+}
+.payment:last-child {
+    align-items: end;
+    text-align: end;
+}
+.payment:first-child {
+    align-items: start;
+    text-align: start;
+}
+.payment.paymentNext {
+    color: #b5b5b6;
+    text-align: center;
+    align-items: center;
+}
+
+.datePaid {
+    padding-top: 15px;
+    font-size: 0.8rem;
+}
+.amountPaid {
+    padding-bottom: 15px;
+    position: relative;
+    top: 6px;
+    width: 100%;
+}
+
+.linePaid {
+    border-bottom: #4f46e5 solid 1px;
+}
+
+
+.recurringBlock {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+    border: 1px solid #e5e7eb;
+    margin-bottom: 1rem;
+}
+.nextDatePaid {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.amountNext {
+    /* font-size: 0.9rem; */
+    font-size: 1.8rem;
+    color: #4f46e5;
+    font-weight: 600;
+}
+.datePaidForLast {
+    border-bottom: blue solid 1px;
 }
