--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,7 +1,7 @@
 .singleFeedback {
   display: flex;
   flex-direction: column;
-  width: calc(100% / 3 - 24px);
+  min-width: 380px;
   background-color: #fff;
   padding: 24px;
   border-radius: 20px;
