--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -43,6 +43,7 @@
 .privillege {
     display: flex;
     justify-content: space-between;
+    padding: 0;
 }
 
 .singlePrivillege {
@@ -66,13 +67,18 @@
 }
 
 .example {
-    margin: 80px auto;
+    margin: 80px 0;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.06);
     border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #e5e7eb;
 }
 
 .feedbackBlock {
     margin: 0 auto 100px;
+    width: 100%;
+    overflow: hidden;
 }
 
 .feedbackBlock h4 {
@@ -86,5 +92,27 @@
 .feedback {
     display: flex;
     justify-content: space-between;
+    gap: 30px;
+    animation: setoff 30s linear infinite;
+    padding: 0;
 }
+
+@keyframes setoff {
+  0%       { transform: translateX(0); }
+  16.667%  { transform: translateX(0); }
+  20%      { transform: translateX(-410px); }
+
+  36.667%  { transform: translateX(-410px); }
+  40%      { transform: translateX(-820px); }
+
+  56.667%  { transform: translateX(-820px); }
+  60%      { transform: translateX(-1230px); }
+
+  76.667%  { transform: translateX(-1230px); }
+  80%      { transform: translateX(-1640px); }
+
+  96.667%  { transform: translateX(-1640px); }
+  100%     { transform: translateX(-2050px); }
+}
+
   
