--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -156,6 +156,23 @@
     padding: 20px;
     gap: 12px;
 }
+.recommendations.disabled {
+    opacity: 0.4;
+    position: relative;
+    pointer-events: none;
+}
+.recommendations.disabled::before {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    content: 'Раздел находится в разработке';
+    font-size: 3rem;
+}
 
 .recommendate {
     display: grid;
