--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -82,6 +82,7 @@
 }
 .timeGraph {
     height: 520px;
+    min-width: 432px;
 }
 
 .graph {
@@ -222,3 +223,26 @@
     background-color: #960505;
 }
 
+.empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 24px;
+    border: 1px solid #e5e7eb;
+    border-radius: 12px;
+    padding: 17px;
+}
+.empty h3 {
+    color: #b5b5b6;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.empty p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #6c6f81;
+}
