--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -53,6 +53,10 @@
     color: #4f46e5;
     font-weight: 700;
 }
+.noNextPaid {
+    color: #b5b5b6;
+    font-weight: 500;
+}
 
 .subscriptionsBlock {
     display: grid;
@@ -73,7 +77,9 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    min-height: 466px;
+    min-width: 728px;
 }
 
 .diagrammBlock {
@@ -81,6 +87,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 24px;
+    min-width: 432px;
 }
 
 .diagramm {
@@ -93,4 +100,27 @@
     height: 100%;
     border: 1px solid #e5e7eb;
     padding: 20px;
+}
+
+.empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 24px;
+    border: 1px solid #e5e7eb;
+    border-radius: 12px;
+}
+.empty h3 {
+    color: #b5b5b6;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.empty p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #6c6f81;
 }
