--- a/src/components/LendingFooter/LendingFooter.module.css
+++ b/src/components/LendingFooter/LendingFooter.module.css
@@ -45,3 +45,51 @@
 .socials a:active {
     transform: scale(0.92);
 }
+
+
+
+@media (max-width: 440px) {
+
+    .footerContainer {
+        height: 100%;
+    }
+
+    .footer {
+        height: 100%;
+        font-size: 0.5rem;
+    }
+
+    .content img {
+        height: 30px;
+    }
+
+    .content {
+        height: 100%;
+        /* flex-direction: column; */
+        padding: 12px 0 5px;
+        padding: 12px 16px 5px;
+        align-items: flex-end;
+        justify-content: space-between;
+    }
+
+    .login {
+        border: #6c6f81 solid 1px;
+        padding: 8px 16px;
+        border-radius: 8px;
+    }
+
+
+
+
+    @media (max-width: 359px) {
+        .content {
+            height: 100%;
+            flex-direction: column;
+            padding: 12px 0 5px;
+            gap: 5px;
+            align-items: center;
+            justify-content: flex-end;
+        }
+    }
+
+}
