--- a/src/components/LendingHeader/LendingHeader.module.css
+++ b/src/components/LendingHeader/LendingHeader.module.css
@@ -59,3 +59,37 @@ nav a:hover {
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2);
     transform: scale(0.97);
 }
+
+
+
+@media (max-width: 440px) {
+    .headerContainer {
+        height: 100%;
+    }
+
+    .header img {
+        height: 70px;
+    }
+
+    .header {
+        flex-direction: column;
+        gap: 24px;
+        padding: 24px 0 12px;
+    }
+
+    .login {
+        border: #6c6f81 solid 1px;
+        padding: 8px 16px;
+        border-radius: 8px;
+    }
+
+
+
+
+    @media (max-width: 359px) {
+        .header img {
+            height: 55px;
+        }
+    }
+
+}
