--- a/src/components/ui/ButtonElement/ButtonElement.module.css
+++ b/src/components/ui/ButtonElement/ButtonElement.module.css
@@ -129,3 +129,17 @@
 Цвет фона: #e0e0e0 (светлый серый).
 Цвет текста: #a0a0a0 (темно-серый).
 */
+
+@media (max-width: 440px) {
+    .mainButton {
+        padding: 16px 26px;
+    }
+}
+
+
+@media (max-width: 359px) {
+    .mainButton {
+        padding: 16px 10px;
+        font-size: 0.85rem;
+    }
+}
