--- a/src/pages/Subscriptions/Subscriptions.module.css
+++ b/src/pages/Subscriptions/Subscriptions.module.css
@@ -21,6 +21,10 @@
     font-weight: 600;
 }
 
+.headerBlock button {
+    width: fit-content;
+}
+
 .filtersBlock {
     display: flex;
     gap: 16px;
