--- a/src/components/ui/ButtonElement/ButtonElement.module.css
+++ b/src/components/ui/ButtonElement/ButtonElement.module.css
@@ -7,6 +7,7 @@
     position: relative;
     color: #fff;
     background-color: #4f46e5;
+    /* width: 100%; */
     box-shadow: 0 4px 12px rgba(60, 60, 240, 0.2);
 }
 .button:hover {
@@ -38,7 +39,7 @@
     border-radius: 8px;
     font-weight: 600;
     font-size: 1rem;
-    /* width: fit-content; */
+    width: 100%;
     height: fit-content;
     box-shadow: 0 4px 12px rgba(79, 70, 229, 0.3);
 }
@@ -48,7 +49,7 @@
     padding: 4px 8px;
     font-size: 13px;
     font-weight: 500;
-    min-width: 90px;
+    max-width: 100px;
     background-color: #e0f2fe;
     color: #0284c7;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
@@ -70,6 +71,7 @@
     background-color: #fee2e2;
     color: #b91c1c;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+    min-width: 90px;
 }
 
 .delButtonCard:hover {
@@ -134,6 +136,11 @@
     .mainButton {
         padding: 16px 26px;
     }
+
+    .buttonsCard {
+        font-size: 11px;
+        padding: 2px 6px;
+    }
 }
 
 
@@ -142,4 +149,8 @@
         padding: 16px 10px;
         font-size: 0.85rem;
     }
+
+    /* .addButton {
+        width: 400px;
+    } */
 }
