--- a/src/components/ui/Diagramm/Diagramm.module.css
+++ b/src/components/ui/Diagramm/Diagramm.module.css
@@ -49,3 +49,12 @@
     display: inline-block;
     width: calc(100% - 10px);
 }
+
+
+
+@media (max-width: 440px) {
+
+    .legendItem {
+        font-size: 0.6rem;
+    }
+}
