--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -54,6 +54,7 @@
     padding-top: 8px;
     display: flex;
     gap: 24px;
+    align-items: stretch;
 }
 
 
@@ -72,7 +73,7 @@
     flex-direction: column;
     grid-column: 1;
     font-size: 1rem;
-    width: 100%;
+    /* width: 100%; */
     font-weight: 400;
 }
 .formBlock h6 {
@@ -132,12 +133,17 @@
 .paidStatusBlock {
     display: flex;
     gap: 20px;
+    justify-content: space-between;
 }
-.paidStatusBlock input {
-    width: 100%;
+.paidStatusBlock label {
+    justify-content: space-between;
+    flex: 1;
+    width: 0;
+
 }
 .paidStatusBlock .dropdownLabel {
-    width: 100%;
+    flex: 1;
+    min-width: 0;
 }
 
 div {
@@ -317,4 +323,56 @@ div.disabled {
 }
 .datePaidForLast {
     border-bottom: blue solid 1px;
+}
+
+
+
+
+@media (max-width: 440px) {
+    .formBlock label,
+    .formBlock h6 {
+        font-size: 0.9rem;
+    }
+
+    .formBlock {
+        gap: 13px;
+        margin: 0;
+    }
+
+    .formBlock input {
+        font-size: 0.9rem;
+    }
+
+    .buttonsBlock {
+        padding-top: 16px;
+    }
+}
+
+@media (max-width: 359px) {
+    .formBlock label,
+    .formBlock h6 {
+        font-size: 0.7rem;
+    }
+
+    .headModal h3,
+    .detailsModal h1 {
+        font-size: 0.9rem;
+    }
+
+    .formBlock input {
+        font-size: 0.7rem;
+    }
+
+    .paidStatusBlock {
+        gap: 10px;
+    }
+
+    .buttonsBlock {
+        padding-top: 16px;
+    }
+
+    .contentBlock p {
+        font-size: 0.8rem;
+    }
+
 }
