--- a/src/components/CardSubscription/CardSubscription.module.css
+++ b/src/components/CardSubscription/CardSubscription.module.css
@@ -67,7 +67,6 @@
 }
 
 .statusSubscription {
-    font-size: 12px;
     font-weight: 500;
     line-height: 1;
     font-size: 10px;
@@ -264,7 +263,20 @@
 
 @media (max-width: 440px) {
 
+    
+
+    
+
+
+
     /* Стили дашборда */
+
+    .dashboard .titleSub {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 0.8rem;
+        /* 16 */
+    }
 
     .dashboard .icon {
         padding: 5px 10px 5px 0;
@@ -276,6 +288,13 @@
         font-size: 11px;
     }
 
+    .dashboard .amount {
+        font-size: 1rem;
+        font-weight: 600;
+        white-space: nowrap;
+        /* 20 */
+    }
+
     .dashboard .pay {
         grid-row: 1 / 3;
         flex-direction: column-reverse;
@@ -283,12 +302,6 @@
         margin: 0;
         justify-self: end;
         align-self: start;
-    }
-
-    .dashboard .titleSub {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-size: 0.8rem;
     }
 
     .dashboard .statusSubscription {
@@ -302,17 +315,63 @@
         grid-row: 4;
     }
 
-    .dashboard .amount {
-        font-size: 1rem;
-        font-weight: 600;
-        white-space: nowrap;
+
+    .subscriptions .titleSub {
+        
     }
+
+    .subscriptions .category {
+        /* 13 */
+    }
+
+    .subscriptions .statusCard {
+        /* 12px */
+    }
+
+    .subscriptions .statusSubscription {
+        /* 10 */
+    }
+
+
 }
 
 @media (max-width: 359px) {
+    
     .dashboard .buttonsBlock {
         display: flex;
         flex-direction: column;
         gap: 5px;
     }
+
+    .subscriptions .icon {
+        padding: 5px 10px 5px 0;
+        margin: 0;
+    }
+    .icon div {
+        width: 35px !important;
+        height: 35px !important;
+    }
+
+    .subscriptions .category {
+        font-size: 11px;
+        /* 13 */
+    }
+
+    .subscriptions .titleSub {
+        font-size: 0.8rem;
+    }
+    
+    .subscriptions .amount {
+        font-size: 1rem;
+        /* 20 */
+    }
+
+    .subscriptions .statusSubscription {
+        font-size: 7px;    
+    }
 }
+
+
+
+
+
