--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -162,14 +162,15 @@ div.disabled {
 /* Молдалка подробностей подписки в топе аналитики  */
 
 .detailsModal {
-    min-height: min(80vh, 470px);
-    width: min(90vw, 640px);
+    min-height: min(80vh, 270px);
+    width: 100%;
 }
 
 .headSub {
     display: flex;
     margin: 0 40px;
     justify-content: center;
+    align-items: center;
     gap: 12px;
 }
 
@@ -230,11 +231,12 @@ div.disabled {
     font-weight: 600;
 }
 
+
 .paidHistory {
-    width: 100%;
     position: relative;
     display: flex;
     justify-content: flex-start;
+    width: 660px;
     overflow: auto;
 }
 
@@ -346,6 +348,66 @@ div.disabled {
     .buttonsBlock {
         padding-top: 16px;
     }
+
+    /* Молдалка подробностей подписки в топе аналитики  */
+
+    .contentBlock h6 {
+        font-size: 0.8rem;
+    }
+
+    .contentBlock h2 {
+        font-size: 16px;
+    }
+
+    .headSub h1 {
+        font-size: 1rem;
+        padding: 0;
+    }
+    .headSub div {
+        width: 30px !important;
+        height: 30px !important;
+    }
+
+    .expenses {
+        width: 100%;
+        padding: 12px 10px;
+    }
+
+    .expenses h3 {
+        font-size: 0.7rem;
+    }
+    .expenses h3 span {
+        font-size: 1.4rem;
+    }
+
+    .paidHistory {
+        width: calc(100% + 20px);
+        -webkit-overflow-scrolling: touch;
+        scrollbar-width: none;
+    }
+    .timeGraphBlock::-webkit-scrollbar {
+        display: none;
+    }
+    .payment:first-child {
+        padding-left: 10px;
+    }
+    .payment:last-child {
+        padding-right: 10px;
+    }
+    .arrow::after {
+        position: absolute;
+        content: '>';
+        top: 42%;
+        left: 75%;
+    }
+
+    .nextDatePaid {
+        font-size: 1rem;
+    }
+    .amountNext {
+        font-size: 1.5rem;
+    }
+
 }
 
 @media (max-width: 359px) {
@@ -373,6 +435,32 @@ div.disabled {
 
     .contentBlock p {
         font-size: 0.8rem;
+    }
+
+    /* Молдалка подробностей подписки в топе аналитики  */
+
+    .contentBlock h6 {
+        font-size: 0.65rem;
+    }
+
+    .contentBlock h2 {
+        font-size: 14px;
+    }
+
+    .headSub h1 {
+        font-size: 0.8rem;
+        padding: 0;
+    }
+    .headSub div {
+        width: 30px !important;
+        height: 30px !important;
+    }
+
+    .expenses h3 {
+        font-size: 0.6rem;
+    }
+    .expenses h3 span {
+        font-size: 1rem;
     }
 
 }
