--- a/src/pages/Settings/Settings.module.css
+++ b/src/pages/Settings/Settings.module.css
@@ -145,6 +145,14 @@
     border-top: 1px solid #e5e7eb;
     padding-top: 10px;
 }
+/* Временно, пока оповещений по sms не будет */
+.toggleNotify.disabled {
+    opacity: 0.8;
+    pointer-events: none;
+    user-select: none;
+    filter: grayscale(0.2);
+    transition: opacity 0.3s ease, filter 0.3s ease;
+}
 
 .selectParams {
     max-width: 470px;
