--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -131,7 +131,7 @@
 
 .dropdownLabel input {
     border: none;
-    margin: 0;
+    margin: 8px 12px;
     padding: 0;
     background-color: transparent;
     height: 100%;
