--- a/src/pages/Settings/Settings.module.css
+++ b/src/pages/Settings/Settings.module.css
@@ -159,7 +159,9 @@
     display: flex;
     gap: 24px;
 }
-
+.selectParams input {
+    margin: 8px 12px;
+}
 .selectParams h6 {
     font-size: 0.9rem;
     font-weight: 400;
