--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -74,6 +74,11 @@
     font-weight: 600;
 }
 
+.activePage {
+    color: #4f46e5;
+    border-bottom: #4f46e5 1px solid;
+    pointer-events: none;
+}
 
 
 @media (max-width: 440px) {
@@ -95,8 +100,16 @@
     }
 
     .socials {
-        display: none;
+        /* display: none; */
+        position: absolute;
+        bottom: 70px;
+        right: 10px;
+        font-size: 25px;
     } 
+
+    .socials button {
+        font-size: 30px;
+    }
 
     .nav {
         width: 100%;
@@ -130,7 +143,8 @@
         background-size: auto 24px;
         background-repeat: no-repeat;
     }
-    .link:hover .settings {
+    .link:hover .settings, 
+    .activePage .settings {
         background-image: url('@/assets/icons/menu/settings_1.svg');
     }
     .link:active .settings {
@@ -144,7 +158,8 @@
         background-size: auto 24px;
         background-repeat: no-repeat;
     }
-    .link:hover .analitics {
+    .link:hover .analitics, 
+    .activePage .analitics {
         background-image: url('@/assets/icons/menu/analitics_1.svg');
     }
     .link:active .analitics {
@@ -158,7 +173,8 @@
         background-size: auto 24px;
         background-repeat: no-repeat;
     }
-    .link:hover .subscriptions {
+    .link:hover .subscriptions, 
+    .activePage .subscriptions {
         background-image: url('@/assets/icons/menu/subscription_1.svg');
     }
     .link:active .subscriptions {
@@ -172,7 +188,8 @@
         background-size: auto 24px;
         background-repeat: no-repeat;
     }
-    .link:hover .dashboard {
+    .link:hover .dashboard, 
+    .activePage .dashboard {
         background-image: url('@/assets/icons/menu/dashboard_1.svg');
     }
     .link:active .dashboard {
@@ -181,5 +198,9 @@
 
     .link:last-child {
         display: none;
+    }
+    
+    .activePage {
+        border: none;
     }
 }
